0.04 Tue Mar 22 23:34:36 CST 2005
- Changed ->headers calling conventions. This may break backwards compat,
  but is cleaner and safer.
- Fixed bugs in ::CGI that broke http header handling
- Refactored code to be more transparent
- Patch from Sebastian Riedel to do proper parsing of form data from STDIN

0.03_03 Fri Mar 18 15:09:52 EST 2005
- Finish fixes from http://rt.cpan.org/NoAuth/Bug.html?id=11409


0.03_02 Thu Feb 17 23:34:00 NZDT 2005
- Make test script not depend on LWP
- Add ->header(), and various generic hook capabilities
- Made HTTP::Server::Simple::CGI use those hooks
- Add ->bad_request(), for protocol errors

0.03_01 Thu Feb 17 21:39:34 NZDT 2005
- Add ->setup() and ->handler()
- Add support for specifying a host to bind listener to
- Split out CGI.pm support into sub-class
- Add Changes file to MANIFEST

0.03 Wed Jan 26 08:55:34 EST 2005

- Test fixes for Win32